--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <a href="#" class="nav__link">О нас</a>
             </li>
             <li class="nav__item">
-              <a href="#" classs="nav__link">Бургеры</a>
+              <a href="#" class="nav__link">Бургеры</a>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">Команда</a>
@@ -119,19 +119,18 @@
             <button class="btn" type="button">Подробности</button>
           </div>
         </li>
-        <li class="comment__item">
+        <div class="comment__item">
           <img class="comment__photo" src="./my_page/img/pagerev/photo2.png" alt="Фотогрфия">
-          <button class="comment__hover">
+          <div class="comment__hover">
             <div class="comment__name">Константин Спилберг</div>
             <div class="comment__text">
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут
-                быть
-                такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки
+                могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
               </p>
             </div>
             <button class="btn" type="button">Подробности</button>
-          </button>
-        </li>
+          </div>
+        </div>
         <li class="comment__item">
           <img class="comment__photo" src="./my_page/img/pagerev/photo3.png" alt="Фотогрфия"><div class="comment__hover">
             <div class="comment__name">Константин Спилберг</div>
