--- a/index.html
+++ b/index.html
@@ -52,7 +52,36 @@
           </h1>
         </div>
       </div>
+      </div>
+      <a href="#" class="promo__scroll_btn" aria-label="Прокрутка на следующцю секцию"></a>
+      </div>
   </section>
+    <ul class="fix__menu">
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob fix__menu__knob--active" href="#" aria-label="О нас"></a>
+      </li>
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob" href="#" aria-label="О нас"></a>
+      </li>
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob" href="#" aria-label="<Бургеры"></a>
+      </li>
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob" href="#" aria-label="Команда"></a>
+      </li>
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob" href="#" aria-label="Меню"></a>
+      </li>
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob" href="#" aria-label="Отзывы"></a>
+      </li>
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob" href="#" aria-label="Как мы работаем"></a>
+      </li>
+      <li class="fix__menu__item">
+        <a class="fix__menu__knob" href="#" aria-label="Отзывы"></a>
+      </li>
+    </ul>
   <section class="section best">
     <div class="container best__container">
       <div class="best__content">
