--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
         <nav>
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">О нас</a>
+              <a href="#" class="nav__link">о нас</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Бургеры</a>
+              <a href="#" class="nav__link">бургеры</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Команда</a>
+              <a href="#" class="nav__link">команда</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Меню</a>
+              <a href="#" class="nav__link">меню</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Отзывы</a>
+              <a href="#" class="nav__link">отзывы</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Как мы работаем</a>
+              <a href="#" class="nav__link">как мы работаем</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Контакты</a>
+              <a href="#" class="nav__link">контакты</a>
             </li>
             <li class="">
-              <a href="#" class="btn">Заказать</a>
+              <a href="#" class="btn">заказать</a>
             </li>
           </ul>
         </nav>
@@ -48,7 +48,7 @@
         <div class="promo__content">
           <img class="promo__img" src="./my_page/img/pageheder/burger.png" alt="Фотогрфия бургера">
           <h1 class="title promo__title">
-            Мы делаем <div class="promo__subtitle">натуральные бургеры</div>
+            мы делаем <div class="promo__subtitle">натуральные бургеры</div>
           </h1>
         </div>
       </div>
@@ -85,7 +85,7 @@
   <section class="section best">
     <div class="container best__container">
       <div class="best__content">
-        <h2 class="title best__title">Мы лучшие</h2>
+        <h2 class="title best__title">Mы лучшие</h2>
         <ul class="best__list">
           <li class="best__item">
             <div class="best__img">
@@ -184,9 +184,9 @@
         </li>
         <li class="comment__item">
           <img class="comment__photo" src="./my_page/img/pagerev/photo5.png" alt="Фотогрфия"><div class="comment__hover">
-            <div class="comment__name">Константин Спилберг</div>
+            <div class="comment__name">константин спилберг</div>
             <div class="comment__text">
-              <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть
+              <p>мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть
               такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
               </p>
             </div>
