--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <section class="section best">
     <div class="container best__container">
       <div class="best__content">
-        <h2 class="title best__title">Mы лучшие</h2>
+        <div class="title best__title">Mы лучшие</div>
         <ul class="best__list">
           <li class="best__item">
             <div class="best__img">
@@ -151,7 +151,7 @@
               <div class="block__container">
                 <div class="block__name ">
                   <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
-                  <p class="block__name_prof">ричард джеймс</p>
+                  <p class="block__name_prof">дэниэл редклиф</p>
                 </div>
                 <div class="block__desc">
                   <div class="block__photo">
@@ -168,26 +168,7 @@
           <li class="team__item">
             <div class="block">
               <div class="block__container">
-                <div class="block__name ">
-                  <img class="block__name_pic block__name_pic--active" src="./my_page/img/teamfoto/trangle.svg" alt="">
-                  <p class="block__name_prof">ричард джеймс</p>
-                </div>
-                <div class="block__desc">
-                  <div class="block__photo">
-                    <img class="block__photo_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
-                  </div>
-                  <div class="block__title">
-                    <h4 class="block__title_job">Оператор</h4>
-                    <p class="block__title_desk">C радостью поможет подобрать идеальный бургер и оформить заказ.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="team__item">
-            <div class="block">
-              <div class="block__container">
-                <div class="block__name ">
+                <div class="block__name block__name_active">
                   <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
                   <p class="block__name_prof">ричард джеймс</p>
                 </div>
@@ -208,7 +189,26 @@
               <div class="block__container">
                 <div class="block__name ">
                   <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
-                  <p class="block__name_prof">ричард джеймс</p>
+                  <p class="block__name_prof">джейк финн</p>
+                </div>
+                <div class="block__desc">
+                  <div class="block__photo">
+                    <img class="block__photo_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
+                  </div>
+                  <div class="block__title">
+                    <h4 class="block__title_job">Оператор</h4>
+                    <p class="block__title_desk">C радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="team__item">
+            <div class="block">
+              <div class="block__container">
+                <div class="block__name ">
+                  <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
+                  <p class="block__name_prof">николай иванов</p>
                 </div>
                 <div class="block__desc">
                   <div class="block__photo">
@@ -328,7 +328,7 @@
   </section>
   <section class="section form">
     <div class="container">
-      <div class="title">Закажите доставку</div>
+      <div class="title form__title">Закажите доставку</div>
       <div class="order__form">
         <form class="order__form-tag" id="order-form">
           <div class="order__form-col">
