--- a/index.html
+++ b/index.html
@@ -227,7 +227,27 @@
     </div>
   </section>
   <section class="section menu">
-  
+    <div class="container menu__container">
+      <div class="title menu__title">меню</div>
+      <div class="menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <div class="menu__container">
+              <div class="menu__name">
+                <p class="menu__subtitle">для мясоедов</p>
+              </div>
+              <div class="menu__desc">
+                <p class="menu__desc__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм
+                сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову,
+                однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно
+                выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм
+                сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                </p>
+              </div>
+            </div>
+        </li>
+      </ul>
+    </div>
   </section>
   <section class="section comment">
         <ul class="comment__list">
