--- a/index.html
+++ b/index.html
@@ -142,109 +142,134 @@
     
   </section>
   <section class="section team">
-    <div class="container">
-      <div class="team__container">
-        <p class="title team__title">команда</p>
-        <ul class="team__list">
-          <li class="team__item">
-            <div class="block">
-              <div class="block__container">
-                <div class="block__name ">
-                  <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
-                  <p class="block__name_prof">дэниэл редклиф</p>
+    <div class="container team__container">
+        <div class="title team__title">команда</div>
+        <div class="team-acco">
+          <ul class="team-acco__list">
+            <li class="team-acco__item">
+              <div class="team-acco__container">
+                <div class="team-acco__name">
+                  <img class="team-acco__name_icon" src="./my_page/img/teamfoto/trangle.svg" alt="">
+                  <p class="team-acco__name_prof">дэниэл редклиф</p>
                 </div>
-                <div class="block__desc">
-                  <div class="block__photo">
-                    <img class="block__photo_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
+                <div class="team-acco__desc">
+                  <div class="team-acco__desc__photo">
+                    <img class="team-acco__desc_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
                   </div>
-                  <div class="block__title">
-                    <h4 class="block__title_job">Оператор</h4>
-                    <p class="block__title_desk">C радостью поможет подобрать идеальный бургер и оформить заказ.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="team__item">
-            <div class="block">
-              <div class="block__container">
-                <div class="block__name block__name_active">
-                  <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
-                  <p class="block__name_prof">ричард джеймс</p>
-                </div>
-                <div class="block__desc">
-                  <div class="block__photo">
-                    <img class="block__photo_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
-                  </div>
-                  <div class="block__title">
-                    <h4 class="block__title_job">Оператор</h4>
-                    <p class="block__title_desk">C радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                  <div class="team-acco__title">
+                    <h4 class="team-acco__title_sub">Оператор</h4>
+                    <p class="team-acco__title_desc">C радостью поможет подобрать идеальный бургер и оформить<br>заказ.</p>
                   </div>
                 </div>
               </div>
-            </div>
-          </li>
-          <li class="team__item">
-            <div class="block">
-              <div class="block__container">
-                <div class="block__name ">
-                  <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
-                  <p class="block__name_prof">джейк финн</p>
-                </div>
-                <div class="block__desc">
-                  <div class="block__photo">
-                    <img class="block__photo_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
+            </li>
+            <li class="team-acco__item">
+                <div class="team-acco__container team-acco__container--active">
+                  <div class="team-acco__name">
+                    <img class="team-acco__name_icon" src="./my_page/img/teamfoto/trangle.svg" alt="">
+                    <p class="team-acco__name_prof">Ричард Джеймс</p>
                   </div>
-                  <div class="block__title">
-                    <h4 class="block__title_job">Оператор</h4>
-                    <p class="block__title_desk">C радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                  <div class="team-acco__desc">
+                    <div class="team-acco__desc__photo">
+                      <img class="team-acco__desc_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
+                    </div>
+                    <div class="team-acco__title">
+                      <h4 class="team-acco__title_sub">Оператор</h4>
+                      <p class="team-acco__title_desc">C радостью поможет подобрать идеальный бургер и оформить<br>заказ.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-          </li>
-          <li class="team__item">
-            <div class="block">
-              <div class="block__container">
-                <div class="block__name ">
-                  <img class="block__name_pic" src="./my_page/img/teamfoto/trangle.svg" alt="">
-                  <p class="block__name_prof">николай иванов</p>
+            </li>
+            <li class="team-acco__item">
+              <div class="team-acco__container">
+                <div class="team-acco__name">
+                  <img class="team-acco__name_icon" src="./my_page/img/teamfoto/trangle.svg" alt="">
+                  <p class="team-acco__name_prof">Джейк Финн</p>
                 </div>
-                <div class="block__desc">
-                  <div class="block__photo">
-                    <img class="block__photo_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
+                <div class="team-acco__desc">
+                  <div class="team-acco__desc__photo">
+                    <img class="team-acco__desc_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
                   </div>
-                  <div class="block__title">
-                    <h4 class="block__title_job">Оператор</h4>
-                    <p class="block__title_desk">C радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                  <div class="team-acco__title">
+                    <h4 class="team-acco__title_sub">Оператор</h4>
+                    <p class="team-acco__title_desc">C радостью поможет подобрать идеальный бургер и оформить<br>заказ.</p>
                   </div>
                 </div>
               </div>
-            </div>
-          </li>
-        </ul>
-      </div>
+            </li>
+            <li class="team-acco__item">
+              <div class="team-acco__container">
+                <div class="team-acco__name">
+                  <img class="team-acco__name_icon" src="./my_page/img/teamfoto/trangle.svg" alt="">
+                  <p class="team-acco__name_prof">Николай Иванов</p>
+                </div>
+                <div class="team-acco__desc">
+                  <div class="team-acco__desc__photo">
+                    <img class="team-acco__desc_pic" src="./my_page/img/teamfoto/aphex.png" alt="Фотография">
+                  </div>
+                  <div class="team-acco__title">
+                    <h4 class="team-acco__title_sub">Оператор</h4>
+                    <p class="team-acco__title_desc">C радостью поможет подобрать идеальный бургер и оформить<br>заказ.</p>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
     </div>
   </section>
   <section class="section menu">
     <div class="container menu__container">
-      <div class="title menu__title">меню</div>
-      <div class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <div class="menu__container">
-              <div class="menu__name">
-                <p class="menu__subtitle">для мясоедов</p>
-              </div>
-              <div class="menu__desc">
-                <p class="menu__desc__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм
+      <h2 class="title menu__title">меню</h2>
+      <ul class="menu-acco">
+        <li class="menu-acco__item">
+          <div class="menu-acco__name" style="background-image: url(./my_page/img/pagemenu/bgthree.png);">
+            <span>для мясоедов</span>
+          </div>
+          <div class="menu-acco__content">
+            <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм
                 сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову,
                 однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно
                 выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм
                 сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
-                </p>
-              </div>
-            </div>
+            </p>
+          </div>
+        </li>
+        <li class="menu-acco__item">
+          <div class="menu-acco__name" style="background-image: url(./my_page/img/pagemenu/bgtwo.png);">
+            <span>вегетарианское</span>
+          </div>
+          <div class="menu-acco__content">
+            <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный
+              механизм
+              сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к
+              слову,
+              однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин,
+              пространственно
+              выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+              конструктивный механизм
+              сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к
+              слову.
+            </p>
+          </div>
+        </li>
+        <li class="menu-acco__item">
+          <div class="menu-acco__name" style="background-image: url(./my_page/img/pagemenu/bgone.png);">
+            <span>диетическое</span>
+          </div>
+          <div class="menu-acco__content">
+            <p>Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный
+              механизм
+              сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к
+              слову,
+              однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин,
+              пространственно
+              выбирает метр. Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
+              конструктивный механизм
+              сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к
+              слову.
+            </p>
+          </div>
         </li>
       </ul>
     </div>
