--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
             <li class="nav__item">
               <a href="#" class="nav__link">контакты</a>
             </li>
-            <li class="">
-              <a href="#" class="btn">заказать</a>
-            </li>
-            <li class="">
-              <a href="#" class="burger__menu">
-                <div class="burger__menu__link"></div>
-              </a>
-            </li>
           </ul>
         </nav>
       </div>
+        <div class="header__order">
+          <div class="heder__order__btn">
+            <a href="#" class="btn">заказать</a>
+          </div>
+          <div class="burger__menu">
+            <a href="#" class="burger__menu">
+              <span class="burger__menu__link"></span>
+            </a>
+          </div>
+        </div>
     </div>
   </header>
   <section class="section promo">
@@ -55,7 +57,7 @@
         <div class="promo__content">
           <img class="promo__img" src="./my_page/img/pageheder/burger.png" alt="Фотогрфия бургера">
           <h1 class="title promo__title">
-            мы делаем <div class="promo__subtitle">натуральные бургеры</div>
+            мы делаем <div class="promo__subtitle">натуральные<br>бургеры</div>
           </h1>
         </div>
       </div>
@@ -128,7 +130,7 @@
               </svg>
             </div>
             <div class="best__deck">
-              <div class="best__subtitle">Натуральные<br>ингридиенты</div>
+              <div class="best__subtitle">Натуральные ингридиенты</div>
               <div class="best__text">
                 <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
               </div>
