--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
       </div>
         <div class="header__order">
-          <div class="heder__order__btn">
+          <div class="header__order__btn">
             <a href="#" class="btn">заказать</a>
           </div>
           <div class="burger__menu">
