--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Burger</title>
+  <script src="./mine.js"></script>
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
@@ -448,7 +449,7 @@
             </label>
           </div>
           <div>
-            <label class="form__radio">
+            <label class="form__radio__checkbox">
               <input type="checkbox" class="form__radio_check" name="call">
               <span class="form__radio_style-check"></span>
               <span class="form__radio_title">Не перезванивать</span>
