--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Burger</title>
-  <script src="./mine.js"></script>
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
@@ -141,8 +140,45 @@
       </div>
     </div>
   </section>
-  <section class="section dark">
-    
+  <section class="section slider">
+    <div class="container slider__container">
+      <div class="slider__menu">
+        <ul class="slider__list">
+          <li class="slider__item">
+            <div class="slider__burger">
+              <div class="slider__burger__drop">
+                  <img src="/my_page/img/slider/grop.png" alt="">
+              </div>
+              <div class="slider__burger__img">
+                <img src="/my_page/img/slider/bgslider.png" alt="Фотогрфия бургера">
+              </div>
+              <div class="slider__burger__icon">
+                  <img src="/my_page/img/slider/kkl.png" alt="">
+              </div>
+            </div>
+            <div class="slider__content">
+              <div class="title slider__title">dark beef<br>burger</div>
+              <div class="slider__desc">
+                <p class="slider__desc_text">
+                  Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя
+                  помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                </p>
+              </div>
+              <div class="slider__prise">
+                <span class="slider__prise_title">500 <span class="slider__prise_subtitle">рублей</span></span>
+                <div class="header__order__btn">
+                  <a href="#" class="btn">заказать</a>
+              </div>
+              </div>
+            </div>   
+          </li>
+        </ul>
+      </div>
+      <div class="slider__control">
+        <div class="slider__right"></div>
+        <div class="slider__left"></div>
+      </div>
+    </div>
   </section>
   <section class="section team">
     <div class="container team__container">
@@ -375,7 +411,7 @@
   
   </section>
   <section class="section form">
-    <div class="container">
+    <div class="container form__container">
       <div class="title form__title">Закажите доставку</div>
       <form action="" class="form">
         <div class="form__list">  
@@ -504,5 +540,7 @@
       </div>
     </div>
   </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./mine.js"></script>
 </body>
 </html>
