--- a/index.html
+++ b/index.html
@@ -454,16 +454,25 @@
               <label class="form__label">
                 <span class="form__label_title">Имя</span>
                 <input type="text" class="form__input" name="name" required>
+                <div class="form__error" id="error"></div>
               </label>
             </div>
             <div class="form__col">
               <label class="form__label">
                 <span class="form__label_title">Телефон</span>
                 <input type="number" class="form__input" name="phone" required>
+                <div class="form__error" id="error"></div>
               </label>
             </div>
           </div>
           <div class="form__row">
+            <div class="form__col">
+              <label class="form__label">
+                <span class="form__label_title">Email</span>
+                <input type="email" class="form__input" name="email" required>
+                <div class="form__error" id="error"></div>
+              </label>
+            </div>
             <div class="form__col">
               <label class="form__label">
                 <span class="form__label_title">Улица</span>
@@ -503,7 +512,7 @@
             <div class="form__col">
               <label class="form__label">
                 <span class="form__label_title">Коментарий</span>
-                <textarea rows="6" class="form__input" placeholder=""></textarea>
+                <textarea rows="6" class="form__input" name="comment" placeholder=""></textarea>
             </div>
           </div>
           <div class="form__rad">
